landing page cleanup/edits (#31)

--- a/docs/src/2.1.QuickStart.mdx
+++ b/docs/src/2.1.QuickStart.mdx
@@ -1,6 +1,6 @@
 # Quick Start
 
-Worldview is a react library for rendering 2D and 3D views using [regl](https://github.com/regl-project/regl).
+Worldview is a react library for rendering 2D and 3D scenes using [regl](https://github.com/regl-project/regl).
 
 Add regl-worldview to your React project:
 
