--- a/docs/src/3.3.Command.mdx
+++ b/docs/src/3.3.Command.mdx
@@ -62,7 +62,7 @@ class Triangle extends Command {
 // usage
 function CommandDemo() {
   return (
-    <Worldview defaultCameraState={{ ...DEFAULT_CAMERA_STATE, perspective: true }}>
+    <Worldview >
       <Triangle color={[0, 0, 1, 1]} />
     </Worldview>
   );
