Add stories based on code demos (#41)
And remove redundant stories

And disable ranges in screeenshots, for consistency, and speed.

Also made sure to pass the CI env var to Docker.

--- a/docs/src/3.11.Overlay.mdx
+++ b/docs/src/3.11.Overlay.mdx
@@ -1,4 +1,4 @@
-import { Overlays } from './jsx/allLiveEditors'
+import { Overlay } from './jsx/allLiveEditors'
 
 # Overlay
 
@@ -34,4 +34,4 @@ type RenderItemInput<T: Overlay> = {
 };
 ```
 
-<Overlays />
+<Overlay />
