--- a/docs/src/3.8.FilledPolygons.mdx
+++ b/docs/src/3.8.FilledPolygons.mdx
@@ -1,8 +1,8 @@
-import { FilledPolygon } from './jsx/allLiveEditors'
+import { FilledPolygons } from './jsx/allLiveEditors'
 
 # FilledPolygons
 
-`<FilledPolygons />` renders filled, flat polygon shapes and inherits from `<Command />`. It is used to render filled polygons.
+`<FilledPolygonss />` renders filled, flat polygon shapes and inherits from `<Command />`. It is used to render filled polygons.
 
 ## Props
 
@@ -34,4 +34,4 @@ type FilledPolygon = {
 }
 ```
 
-<FilledPolygon />
+<FilledPolygons />
