--- a/docs/src/3.11.Overlay.mdx
+++ b/docs/src/3.11.Overlay.mdx
@@ -6,10 +6,10 @@ import { Overlay } from './jsx/allLiveEditors'
 
 ## Props
 
-| Name       | Type                                 | Default | Description                            |
-| ---------- | ------------------------------------ | ------- | -------------------------------------- |
-| children   | `T[]`                                | []      | array of Overlay markers to render     |
-| renderItem | `(RenderItemInput<T>) => React.Node` |         | custom renderer to render each overlay |
+| Name         | Type                                 | Default | Description                            |
+| ------------ | ------------------------------------ | ------- | -------------------------------------- |
+| `children`   | `T[]`                                | `[]`    | array of Overlay markers to render     |
+| `renderItem` | `(RenderItemInput<T>) => React.Node` |         | custom renderer to render each overlay |
 
 ### Example
 
