--- a/docs/src/3.13.Spheres.mdx
+++ b/docs/src/3.13.Spheres.mdx
@@ -6,9 +6,9 @@ import {SpheresSingle, SpheresInstanced, SpheresInstancedColor} from './jsx/allL
 
 ## Props
 
-| Name     | Type       | Default | Description                       |
-| -------- | ---------- | ------- | --------------------------------- |
-| children | `Sphere[]` | []      | array of Sphere markers to render |
+| Name       | Type       | Default | Description                       |
+| ---------- | ---------- | ------- | --------------------------------- |
+| `children` | `Sphere[]` | `[]`    | array of Sphere markers to render |
 
 ### Sphere
 
