--- a/docs/src/3.14.Text.mdx
+++ b/docs/src/3.14.Text.mdx
@@ -6,9 +6,9 @@ import {Text} from './jsx/allLiveEditors'
 
 ## Props
 
-| Name     | Type     | Default | Description                     |
-| -------- | -------- | ------- | ------------------------------- |
-| children | `Text[]` | []      | array of Text markers to render |
+| Name       | Type     | Default | Description                     |
+| ---------- | -------- | ------- | ------------------------------- |
+| `children` | `Text[]` | `[]`    | array of Text markers to render |
 
 ### Text
 
