--- a/docs/src/3.15.Triangles.mdx
+++ b/docs/src/3.15.Triangles.mdx
@@ -6,9 +6,9 @@ import {Triangles} from './jsx/allLiveEditors'
 
 ## Props
 
-| Name     | Type         | Default | Description                         |
-| -------- | ------------ | ------- | ----------------------------------- |
-| children | `Triangle[]` | []      | array of Triangle markers to render |
+| Name       | Type         | Default | Description                         |
+| ---------- | ------------ | ------- | ----------------------------------- |
+| `children` | `Triangle[]` | `[]`    | array of Triangle markers to render |
 
 ### Triangle
 
