--- a/docs/src/3.4.Arrows.mdx
+++ b/docs/src/3.4.Arrows.mdx
@@ -6,9 +6,9 @@ import { Arrows } from './jsx/allLiveEditors'
 
 ## Props
 
-| Name     | Type                         | Default | Description                      |
-| -------- | ---------------------------- | ------- | -------------------------------- |
-| children | `(PoseArrow | PointArrow)[]` | []      | array of Arrow markers to render |
+| Name       | Type                         | Default | Description                      |
+| ---------- | ---------------------------- | ------- | -------------------------------- |
+| `children` | `(PoseArrow | PointArrow)[]` | `[]`    | array of Arrow markers to render |
 
 ### PoseArrow
 
