--- a/docs/src/3.5.Cones.mdx
+++ b/docs/src/3.5.Cones.mdx
@@ -6,9 +6,9 @@ import { Cones } from './jsx/allLiveEditors'
 
 ## Props
 
-| Name     | Type     | Default | Description                     |
-| -------- | -------- | ------- | ------------------------------- |
-| children | `Cone[]` | []      | array of Cone markers to render |
+| Name       | Type     | Default | Description                     |
+| ---------- | -------- | ------- | ------------------------------- |
+| `children` | `Cone[]` | `[]`    | array of Cone markers to render |
 
 ### Cone
 
