--- a/docs/src/3.6.Cubes.mdx
+++ b/docs/src/3.6.Cubes.mdx
@@ -6,9 +6,9 @@ import { Cubes } from './jsx/allLiveEditors'
 
 ## Props
 
-| Name     | Type     | Default | Description                     |
-| -------- | -------- | ------- | ------------------------------- |
-| children | `Cube[]` | []      | array of cube markers to render |
+| Name       | Type     | Default | Description                     |
+| ---------- | -------- | ------- | ------------------------------- |
+| `children` | `Cube[]` | `[]`    | array of cube markers to render |
 
 ### Cone
 
