--- a/docs/src/3.7.Cylinders.mdx
+++ b/docs/src/3.7.Cylinders.mdx
@@ -6,9 +6,9 @@ import { Cylinders } from './jsx/allLiveEditors'
 
 ## Props
 
-| Name     | Type         | Default | Description                         |
-| -------- | ------------ | ------- | ----------------------------------- |
-| children | `Cylinder[]` | []      | array of Cylinder markers to render |
+| Name       | Type         | Default | Description                         |
+| ---------- | ------------ | ------- | ----------------------------------- |
+| `children` | `Cylinder[]` | `[]`    | array of Cylinder markers to render |
 
 ### Cylinder
 
