--- a/docs/src/3.3.Command.mdx
+++ b/docs/src/3.3.Command.mdx
@@ -5,9 +5,9 @@ import CommandDemo from './jsx/Command.js';
 Command is the base class for all regl-based drawing commands. Subclasses should override getDrawProps and (and optionally getHitmapProps). Note: getHitmapProps is not implemented in this base class.
 Checkout [Writing A Custom Command Component](/guides/writing-a-custom-command-component) for more.
 
-| Name       | type    | Default | Description                                                                       |
-| ---------- | ------- | ------- | --------------------------------------------------------------------------------- |
-| layerIndex | ?number |         | defines the draw order of each command, e.g. -1 will put the shape in lower layer |
+| Name         | optional | type     | Default | Description                                                                       |
+| ------------ | -------- | -------- | ------- |
+| `layerIndex` | yes      | `number` |         | defines the draw order of each command, e.g. -1 will put the shape in lower layer |
 
 
 Sample usage:
