--- a/docs/src/3.8.FilledPolygons.mdx
+++ b/docs/src/3.8.FilledPolygons.mdx
@@ -6,9 +6,9 @@ import { FilledPolygons } from './jsx/allLiveEditors'
 
 ## Props
 
-| Name     | Type              | Default | Description                              |
-| -------- | ----------------- | ------- | ---------------------------------------- |
-| children | `FilledPolygon[]` | []      | array of FilledPolygon markers to render |
+| Name       | Type              | Default | Description                              |
+| ---------- | ----------------- | ------- | ---------------------------------------- |
+| `children` | `FilledPolygon[]` | `[]`    | array of FilledPolygon markers to render |
 
 ### FilledPolygon
 
