Bunch of small improvements to static pages (#55)
The biggest improvement is a new landing page that links to webviz-core
tool, Worldview docs, and Github.

Besides that I made a bunch of small improvements:
- Updated READMEs and made them all consistent with each other (same
  headlines and formatting and stuff).
- Added link and screenshot of basic example to regl-worldview README.
- Split out “Commands” section out of “API” section.
- Lots of minor language / docs improvements in regl-worldview docs.
- Fixed a bunch of broken links in docs.
- Made some example look better.
- Removed some unused scripts from package.json
- Fixed `docs-deploy` when it runs on CI (didn’t have a problem with
  `cp -f` and symlinks locally but on CI it doesn’t work).

--- a/docs/src/1.2.Composition.mdx
+++ b/docs/src/1.2.Composition.mdx
@@ -2,6 +2,6 @@ import {Composition} from './jsx/allLiveEditors.js'
 
 # Composition
 
-Compose command components and DOM nodes to form new shapes inside the 2D/3D view.
+Compose command components and DOM nodes to form new shapes.
 
 <Composition />
