--- a/docs/src/3.4.FlowTypes.mdx
+++ b/docs/src/3.4.FlowTypes.mdx
@@ -2,7 +2,7 @@ import GithubLink from './utils/GithubLink'
 
 # Flow types
 
-Flow types are supported. To use the types, import directly from `regl-worldview`. <GithubLink shouldPrefixLogo href="https://github.com/cruise-automation/webviz/blob/master/packages/regl-worldview/src/types/index.js"> more type definitions </GithubLink>
+Flow types are supported. To use the types, import directly from `regl-worldview`. <GithubLink shouldPrefixLogo href="https://github.com/cruise-automation/webviz/blob/master/packages/regl-worldview/src/types/index.js"> See Github for more type definitions.</GithubLink>
 
 ```js
 // @flow
