--- a/docs/src/2.1.QuickStart.mdx
+++ b/docs/src/2.1.QuickStart.mdx
@@ -1,6 +1,6 @@
 # Quick Start
 
-Worldview is a react library for rendering 2D and 3D scenes using [regl](https://github.com/regl-project/regl).
+**Worldview** is a react library for rendering 2D and 3D scenes using [regl](https://github.com/regl-project/regl).
 
 Add regl-worldview to your React project:
 
@@ -10,6 +10,8 @@ npm install --save regl-worldview
 
 If you're not using a module bundler or package manager we also have a global ("UMD") build hosted on the unpkg CDN. Simply add the following script tag to the bottom of your HTML file:
 
-```js
+```html
 <script src="https://unpkg.com/regl-worldview/dist/regl-worldview.umd.min.js" />
 ```
+
+Then try rendering the [basic example](#/docs/examples/basicexample).
