--- a/docs/src/4.7.Overlay.mdx
+++ b/docs/src/4.7.Overlay.mdx
@@ -2,7 +2,7 @@ import { Overlay } from './jsx/allLiveEditors'
 
 # Overlay
 
-`<Overlay />` inherits from `<Command />`. You can use this to overlay dom elements. The renderProp`renderItem` will be called with each component as well as 3d space projected coordinates you can use to absolutely position the dom element on top of the 3d scene. This makes it easy to add interactive react components on top of your 3d scene.
+`<Overlay />` inherits from `<Command />`. You can use this to overlay DOM elements. The renderProp `renderItem` will be called with each component as well as 3d space projected coordinates, which you can use to absolutely position the DOM element on top of the 3d scene. This makes it easy to add interactive React components on top of your 3d scene.
 
 ## Props
 
