--- a/docs/src/4.1.Arrows.mdx
+++ b/docs/src/4.1.Arrows.mdx
@@ -2,7 +2,7 @@ import { Arrows } from './jsx/allLiveEditors'
 
 # Arrows
 
-`<Arrows />` renders arrow shapes and inherits from `<Command />`.
+`<Arrows />` renders arrow shapes.
 
 ## Props
 
