--- a/docs/src/4.10.Text.mdx
+++ b/docs/src/4.10.Text.mdx
@@ -2,7 +2,7 @@ import {Text} from './jsx/allLiveEditors'
 
 # Text
 
-`<Text />` inherits from `<Command />`. It renders text using DOM nodes on top of the 3D scene.
+`<Text />` renders camera-facing text. It renders text using DOM nodes on top of the 3D scene.
 
 ## Props
 
