--- a/docs/src/4.11.Triangles.mdx
+++ b/docs/src/4.11.Triangles.mdx
@@ -2,7 +2,7 @@ import {Triangles} from './jsx/allLiveEditors'
 
 # Triangles
 
-`<Triangles />` inherits from `<Command />`.
+`<Triangles />` renders a list of triangles.
 
 ## Props
 
