--- a/docs/src/4.2.Cones.mdx
+++ b/docs/src/4.2.Cones.mdx
@@ -2,7 +2,7 @@ import { Cones } from './jsx/allLiveEditors'
 
 # Cones
 
-`<Cones />` renders cone shapes and inherits from `<Command />`.
+`<Cones />` renders cone shapes.
 
 ## Props
 
