--- a/docs/src/4.4.Cylinders.mdx
+++ b/docs/src/4.4.Cylinders.mdx
@@ -2,7 +2,7 @@ import { Cylinders } from './jsx/allLiveEditors'
 
 # Cylinders
 
-`<Cylinders />` renders cylinder shapes and inherits from `<Command />`.
+`<Cylinders />` renders cylinder shapes.
 
 ## Props
 
