--- a/docs/src/4.5.FilledPolygons.mdx
+++ b/docs/src/4.5.FilledPolygons.mdx
@@ -2,7 +2,7 @@ import { FilledPolygons } from './jsx/allLiveEditors'
 
 # FilledPolygons
 
-`<FilledPolygonss />` renders filled, flat polygon shapes and inherits from `<Command />`. It is used to render filled polygons.
+`<FilledPolygons />` renders filled, flat polygon shapes. It is used to render filled polygons.
 
 ## Props
 
