--- a/docs/src/4.6.Lines.mdx
+++ b/docs/src/4.6.Lines.mdx
@@ -2,7 +2,7 @@ import { LinesDemo, LinesWireframe } from "./jsx/allLiveEditors";
 
 # Lines
 
-`<Lines />` renders 3d lines and inherits from `<Command />`.
+`<Lines />` renders 3d lines.
 
 ## Props
 
