--- a/docs/src/4.8.Points.mdx
+++ b/docs/src/4.8.Points.mdx
@@ -2,7 +2,7 @@ import { Points } from './jsx/allLiveEditors'
 
 # Points
 
-`<Points />` renders a cloud of points sharing a single point size and color and inherits from `<Command />`.
+`<Points />` renders a cloud of points sharing a single point size and color.
 
 ## Props
 
