--- a/docs/src/4.9.Spheres.mdx
+++ b/docs/src/4.9.Spheres.mdx
@@ -2,7 +2,7 @@ import {SpheresSingle, SpheresInstanced, SpheresInstancedColor} from './jsx/allL
 
 # Spheres
 
-`<Spheres />` renders a list of sphere shapes and inherits from `<Command />`.
+`<Spheres />` renders a list of sphere shapes.
 
 ## Props
 
