--- a/docs/src/4.3.Cubes.mdx
+++ b/docs/src/4.3.Cubes.mdx
@@ -2,7 +2,7 @@ import { Cubes } from './jsx/allLiveEditors'
 
 # Cubes
 
-`<Cubes />` renders cube shapes and inherits from `<Command />`.
+`<Cubes />` renders cube shapes.
 
 ## Props
 
