--- a/docs/src/2.1.QuickStart.mdx
+++ b/docs/src/2.1.QuickStart.mdx
@@ -11,7 +11,7 @@ npm install --save regl-worldview
 If you're not using a module bundler or package manager we also have a global ("UMD") build hosted on the unpkg CDN. Simply add the following script tag to the bottom of your HTML file:
 
 ```html
-<script src="https://unpkg.com/regl-worldview/dist/regl-worldview.umd.min.js" />
+<script src="https://unpkg.com/regl-worldview/dist/index.umd.js" />
 ```
 
 Then try rendering the [basic example](#/docs/examples/basicexample).
