GLTFScene: baseColorFactor & bug fixes (#68)
- Add support for baseColorFactor.
- Make baseColorTexture optional (it's assumed to be white by default).
- Add a prop to set alpha globally, since the baseColor stuff comes from the model itself which isn't expected to change dynamically.
- Enable blend to allow alpha values to take effect.
- Fix an issue where bitmap.close() was called multiple times if the same image texture was used for multiple samplers, and fix some issues with models that don't have any images.
- Fix calculation of length for typed arrays when the accessor is offset from the start of the bufferView.

--- a/docs/src/4.12.GLTFScene.mdx
+++ b/docs/src/4.12.GLTFScene.mdx
@@ -11,6 +11,7 @@ import {DuckScene} from './jsx/allLiveEditors';
 | `model` | `string | (() => Promise<Object>)` |                                     | URL of a `.glb` file to load, or an async function resolving to a loaded model. (A `parseGLB` function is also exported if you want custom logic for loading the model.) The file must define a single `scene`. |
 | `pose`  | `Pose`                             | zero position, identity orientation | position and orientation at which to render the scene                                                                                                                                                           |
 | `scale` | `Scale`                            | `{ x: 1, y: 1, z: 1 }`              | scale factor                                                                                                                                                                                                    |
+| `alpha` | `number`                           | 1                                   | global opacity multiplier                                                                                                                                                                                       |
 
 ## Duck.glb
 
