Add 'Open in CodeSandbox' link (#73)

--- a/docs/src/2.1.QuickStart.mdx
+++ b/docs/src/2.1.QuickStart.mdx
@@ -14,4 +14,4 @@ If you're not using a module bundler or package manager we also have a global ("
 <script src="https://unpkg.com/regl-worldview/dist/index.umd.js" />
 ```
 
-Then try rendering the [basic example](#/docs/examples/basicexample).
+Then try rendering the [basic example](#/docs/examples/basic-example). [Open in CodePen](https://codepen.io/vidaaudrey/pen/WPwmqg)
