--- a/docs/src/3.1.Worldview.mdx
+++ b/docs/src/3.1.Worldview.mdx
@@ -22,12 +22,7 @@ _All props are optional._
 
 ## Mouse Event Handlers
 
-Currently Worldview supports the following mouse event handlers: `onDoubleClick`, `onMouseDown`, `onMouseUp`, `onMouseMove`, and `onClick`. When a supported DOM event is fired, the event handler will be triggered with the original event object and additional click information which can help build interactive views:
-
-- `ray`: the raw raycasting information including `dir` (direction), `origin`, and `point` (all in `Vec3` format).
-- `clickedObjectId`: the `hitmapId` that you specified in the regl commands (`undefined` if it's not specified).
-
-For an example, see [Interactivity](#/docs/examples/interactivity).
+See [MouseEvents](#/docs/api/mouse-events).
 
 ## Keyboard Controls
 
