Amend FilledPolygon types (#93)
* Amend FilledPolygon color type

* convert if in point format, directly pass through color prop

* update types

* fix up some types!

--- a/docs/src/4.5.FilledPolygons.mdx
+++ b/docs/src/4.5.FilledPolygons.mdx
@@ -28,8 +28,8 @@ type FilledPolygon = {
     g: number, // between 0 and 1
     b: number, // between 0 and 1
     a: number, // between 0 and 1
-  },
-  points:[{ x: number, y: number, z: number }],
+  } | [number, number, number, number],
+  points: [{ x: number, y: number, z: number } | [number, number, number]],
   id: number,
 }
 ```
